# aes-platform

./: .gitconfig  .gitignore  README.html  README.md  docker-compose.yml  fix-ui-readability.sh  index.html  label_data.py  predict.py  proposal.tex  pyproject.toml  requirements.txt  reviewer (1).html  reviewer.html  score_essays.py  start_backend.sh  test_essay.txt  train_pearson_adapters.py
backend/: main.py  main.py.bak
backups/: aes_20260306.sql  aes_20260307.sql
config/: default.yaml
docs/: Intro-page.html  README.html  Research paper  Research-paper.html  app.js  app.js.bak  home.html  home.html.bak2  index.html  reviewer.html  style.css  style.css.bak
frontend/: index.html
scripts/: download_data.py  evaluate.py  train.py
src/: __init__.py
src/evaluation/: qwk.py
src/inference/: output_parser.py  scorer.py
src/model/: setup.py  setup.py.broken
src/serving/: multi_lora.py
src/training/: trainer.py
