[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multi-lora-aes"
version = "0.1.0"
description = "Multi-LoRA Automated Essay Scoring — Scalable AES with Parameter-Efficient Fine-Tuning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
